@@ -1,0 +1,20 @@
+#
+# Z-Wave CONFIGURATION:
+#
+# Z-Wave serial port configuration
+
+##
+# Serial port
+zwave.comPort=/dev/ttyUSB0
+
+##
+# Communication layer [RXTX, PAD]
+zwave.commLayer=RXTX
+
+##
+# Port abstraction daemon (PAD) host address
+zwave.pad.host=localhost
+
+##
+# Port abstraction daemon (PAD) TCP port
+zwave.pad.port=7876
